--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                     </div>
                 </section>-->
 
-                <!--========== LANGUAGES ==========-->
+                <!--========== LANGUAGES ==========
                 <section class="languages section">
                     <h3 class="section-title" id="translate" lang="idiomas">Languages</h3>
                     <div class="languages__container">
@@ -384,7 +384,7 @@
                             </li>
                         </ul>
                     </div>
-                </section>
+                </section>-->
 
                 <!--========== INTERESTS ==========-->
                 <section class="interests section">
