--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -111,14 +111,14 @@
 
                     </div>
 
-                    <!-- Theme change button -->
                     <div class="change-theme">
-                        {# <i class="bx bx-download" title="Download" id="resume-button"></i> #}
-                        <select name="select" style=" margin-right: 15px; margin-left: 15px" title="Language"
+                        <!-- Theme change button -->
+                        <!-- <i class="bx bx-download" title="Download" id="resume-button"></i>
+                       <select name="select" style=" margin-right: 15px; margin-left: 15px" title="Language"
                             onchange="changeLanguage(value)" id='language-selector'>
                             <option value="en" id="translate" lang="english">English</option>
                             <option value="es" id="translate" lang="spanish">Spanish</option>
-                        </select>
+                        </select>-->
                         <i class="bx bx-moon" title="Theme" id="theme-button"></i>
                     </div>
                 </section>
@@ -127,7 +127,7 @@
                 <!--========== PROFILE ==========-->
                 <section class="profile section" id="profile">
 
-                    <h2 class="section-title" id="translate" lang='profileTitle'>Profile</h2>
+                    <h2 class="section-title" id="translate" lang='profileTitle'>Perfil</h2>
 
                     <p class="profile__description"  lang='profileDescription'>
                         Ingeniera en Ciencias Informáticas
@@ -143,7 +143,7 @@
 
                 <!--========== EDUCATION ==========-->
                 <section class="education section" id="education">
-                    <h2 class="section-title" id="translate" lang='profileEducation'>Education</h2>
+                    <h2 class="section-title" id="translate" lang='profileEducation'>Educación</h2>
 
                     <div class="education__container bd-grid">
                         <div class="education__content">
@@ -205,7 +205,7 @@
             <div class="resume__right">
                 <!--========== EXPERIENCE ==========-->
                 <section class="experience section" id="experience">
-                    <h2 class="section-title" id="translate" lang="profileExperience">Experience</h2>
+                    <h2 class="section-title" id="translate" lang="profileExperience">Experiencia</h2>
 
                     <div class="experience__container bd-grid">
                         <div class="experience__content">
@@ -360,28 +360,31 @@
                 </section>
 
                 <!--========== CERTIFICATES ==========-->
-                <!--<section class="certificate section" id="certificates">
-                    <h2 class="section-title" id="translate" lang="profileCertificates">Certificates</h2>
+                <section class="certificate section" id="certificates">
+                    <h2 class="section-title" id="translate" lang="profileCertificates">Cerfificados</h2>
 
                     <div class="certificate__container bd-grid">
                         <div class="certificate__content bd-grid">
-                            <h3 class="certificate__title" id="translate" lang="certificate1">Scrum Fundamentals
-                                Certified</h3>
-                            <span class="certificate__company">Jul 2021 | SCRUMstudy</span>
-                            <p class="certificate__description" id="translate" lang="certificateDescription1">
-                                Provide knowledge and skills to apply and follow best practices on SCRUM framework.
-                            </p>
+                            <h3 class="certificate__title">
+                                ACCREDITED SOFTWARE TESTING FUNDAMENTALS CERTIFICATION 
+                            </h3>
+                            <span class="certificate__company">Oct 2023 | ASTFC</span>                           
                         </div>
                     </div>
-                </section>-->
+                </section>
 
                 <!--========== LANGUAGES ==========-->
                 <section class="languages section">
-                    <h3 class="section-title" id="translate" lang="idiomas">Languages</h3>
+                    <h3 class="section-title" id="translate" lang="idiomas">Idiomas</h3>
                     <div class="languages__container">
                         <ul class="languages__content bd-grid">
                             <li class="languages__name" id="translate" lang="spanish">
-                                <span class="languages__circle"></span> Spanish
+                                <span class="languages__circle"></span> Español
+                            </li>
+                        </ul>
+                        <ul class="languages__content bd-grid">
+                            <li class="languages__name" id="translate" lang="english">
+                                <span class="languages__circle"></span> Inglés
                             </li>
                         </ul>
                     </div>
@@ -389,26 +392,26 @@
 
                 <!--========== INTERESTS ==========-->
                 <section class="interests section">
-                    <h2 class="section-title" id="translate" lang="interest">Interests</h2>
+                    <h2 class="section-title" id="translate" lang="interest">Intereses</h2>
 
                     <div class="interests__container bd-grid">
                         <div class="interests__content">
                             <i class="bx bx-headphone interests__icon"></i>
-                            <span class="interests__name" id="translate" lang="music">Music</span>
+                            <span class="interests__name" id="translate" lang="music">Música</span>
                         </div>
                         <div class="interests__content">
                             <i class="bx bx-run interests__icon"></i>
-                            <span class="interests__name" id="translate" lang="workout">Workout</span>
+                            <span class="interests__name" id="translate" lang="workout">Ejercicios</span>
                         </div>
 
                         <div class="interests__content">
                             <i class="bx bx-coffee interests__icon"></i>
-                            <span class="interests__name" id="translate" lang="cofee">Cofee</span>
+                            <span class="interests__name" id="translate" lang="cofee">Café</span>
                         </div>
 
                         <div class="interests__content">
                             <i class="bx bxs-plane-alt interests__icon"></i>
-                            <span class="interests__name" id="translate" lang="travel">Travel</span>
+                            <span class="interests__name" id="translate" lang="travel">Viajar</span>
                         </div>
                     </div>
                 </section>
