--- a/index.html
+++ b/index.html
@@ -234,9 +234,8 @@
                                             <li class="experience__description">
                                                 <span class="experience__circle"></span>
                                                 <div  lang="descriptionJob0">
-                                                    Identificar y documentar los problemas del
-                                                    producto. Documentación sobre el diseño e implementación de nuevas
-                                                    funcionalidades.
+                                                    Identificar y documentar los problemas o (bugs) del
+                                                    producto.
                                                 </div>
                                             </li>
                                             <li class="experience__description">
@@ -258,6 +257,12 @@
                                             <li class="experience__description">
                                                 <span class="experience__circle"></span>
                                                 <div  lang="descriptionJob0">
+                                                    Onboarding a los clientes durante su inicio con nosotros.
+                                                </div>
+                                            </li>
+                                            <li class="experience__description">
+                                                <span class="experience__circle"></span>
+                                                <div  lang="descriptionJob0">
                                                     Ejecución y validación de casos de pruebas funcionales,
                                                     documentación de los
                                                     resultados obtenidos, notificarlos al equipo así como dar
@@ -265,8 +270,27 @@
                                                     los errores encontrados.
                                                 </div>
                                             </li>
+                                            <li class="experience__description">
+                                                <span class="experience__circle"></span>
+                                                <div  lang="descriptionJob0">
+                                                    Seguimiento constante del estado del proyecto, reportando a la alta gerencia y cliente final, resolviendo incidencias y monitoreando posibles riesgos.                                                </div>
+                                            </li>
+                                        </li>
+                                        <li class="experience__description">
+                                            <span class="experience__circle"></span>
+                                            <div  lang="descriptionJob0">
+                                                Apoyo o asistencia en el manejo y mantenimiento de sistemas informáticos.                                            </div>
+                                        </li>
                                         </ul>
                                     </li>
+                                </li>
+                                <li class="experience__description">
+                                    <span class="experience__circle"></span>
+                                    <div  lang="descriptionJob0">
+                                        Soporte al  cliente con la toma de nuevos Requisitos.
+                                    </li>
+                                </ul>
+                            </li>
                                 </ul>
                             </div>
                         </div>
@@ -348,6 +372,14 @@
                                                     regresión, aceptación...). Identificación y clasificación de bugs y
                                                     notificación al
                                                     equipo de desarrollo.
+                                                </div>
+                                            </li> 
+                                            
+                                            <li class="experience__description">
+                                                <span class="experience__circle"></span>
+                                                <div  lang="descriptionJob4">
+                                                    Administración de planes, casos y resultados (reportes) de pruebas de calidad manuales aplicadas a proyectos de sistemas ERP.
+
                                                 </div>
                                             </li>
                                         </ul>
