--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
                     <div class="change-theme">
                         <!-- Theme change button -->
-                       <!-- <i class="bx bx-download" title="Download" id="resume-button"></i>
-                       <select name="select" style=" margin-right: 15px; margin-left: 15px" title="Language"
+                       <i class="bx bx-download" title="Download" id="resume-button"></i>
+                       <!-- <select name="select" style=" margin-right: 15px; margin-left: 15px" title="Language"
                             onchange="changeLanguage(value)" id='language-selector'>
                             <option value="en" id="translate" lang="english">English</option>
                             <option value="es" id="translate" lang="spanish">Spanish</option>
